[package]
name = "bluemap-singleserve"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde-inline-default = "0.2"
default-from-serde = "0.1"
dirs = "5"
tokio = { version = "1", features = [ "fs" ]}
actix-files = "0.6"
mime = "0.3"
